# GNSS_Nrf91

./: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
components/gnss/: gnss.c  gnss.h
components/nrf91_modem/: nrf91_modem.c  nrf91_modem.h
src/: main.c
